--- a/src/scss/global/_mediaqueries.scss
+++ b/src/scss/global/_mediaqueries.scss
@@ -19,7 +19,7 @@ $mqBreakpoints: (
     extrasmall: 480px,
     small: 768px,
     medium: 992px,
-    large: 1200px
+    large: 1280px
 );
 
 /**
